# controle_despesas

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: .gitkeep  alertas.json  categorias.json  lancamentos.json  orcamentos.json  settings.json
src/: __init__.py
src/cli/: __init__.py  comandos_alerta.py  comandos_categoria.py  comandos_lancamento.py  comandos_relatorio.py  formatadores.py  main.py
src/models/: __init__.py  alerta.py  categoria.py  lancamento.py  orcamento.py
src/persistence/: __init__.py  gerenciador_dados.py  json_storage.py
tests/: test_alerta.py  test_categoria.py  test_lancamento.py  test_orcamento.py
